cmake_minimum_required(VERSION 3.0.2)
project(fetch_behavior)

find_package(catkin REQUIRED COMPONENTS
  rospy
  std_msgs
  geometry_msgs
  trajectory_msgs
  control_msgs
  moveit_commander
)

catkin_package()

catkin_install_python(PROGRAMS
  scripts/fetch_behavior_node.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
