<?xml version="1.0"?>
<package format="2">
  <name>fetch_behavior</name>
  <version>0.0.1</version>
  <description>Behavior control for Fetch robot</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_commander</depend>

</package>
